{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 112,
  "lineage": "e85ff9da-5c76-aba2-49ff-a6c9acfc4d3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "analytics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08240852c73876493",
            "arn": "arn:aws:ec2:eu-central-1:263112802384:elastic-ip/eipalloc-08240852c73876493",
            "association_id": "eipassoc-00a8fe280980fde0c",
            "domain": "vpc",
            "id": "eipalloc-08240852c73876493",
            "instance": "i-0c3a5c36e9b34dd2e",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0c690259e181b5412",
            "private_dns": "ip-10-0-0-180.eu-central-1.compute.internal",
            "private_ip": "10.0.0.180",
            "public_dns": "ec2-3-127-52-193.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.52.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "social-medias-dev-analytics-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-analytics-eip",
              "Project": "social-medias"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020eef2d7db59c7e6",
            "arn": "arn:aws:ec2:eu-central-1:263112802384:elastic-ip/eipalloc-020eef2d7db59c7e6",
            "association_id": "eipassoc-0fb490ce996f9a9e4",
            "domain": "vpc",
            "id": "eipalloc-020eef2d7db59c7e6",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0922cab10a0f25232",
            "private_dns": "ip-10-0-0-252.eu-central-1.compute.internal",
            "private_ip": "10.0.0.252",
            "public_dns": "ec2-18-193-170-76.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.193.170.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "social-medias-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-nat-eip",
              "Project": "social-medias"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "analytics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f150f7e9b64c8271",
            "arn": "arn:aws:ec2:eu-central-1:263112802384:instance/i-0c3a5c36e9b34dd2e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "social-medias-dev-analytics-ec2",
            "id": "i-0c3a5c36e9b34dd2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c690259e181b5412",
            "private_dns": "ip-10-0-0-180.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.180",
            "public_dns": "ec2-3-127-52-193.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.52.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "social-medias"
                },
                "throughput": 125,
                "volume_id": "vol-03045d23c5467a36c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a545fd5b38efeec5",
            "tags": {
              "Name": "social-medias-dev-analytics",
              "Role": "superset-postgres"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-analytics",
              "Project": "social-medias",
              "Role": "superset-postgres"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0410c30cf6dfb7b1c"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.analytics_ec2",
            "aws_iam_role.analytics_ec2",
            "aws_security_group.analytics_ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available",
            "random_password.postgres",
            "random_password.superset_secret"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:internet-gateway/igw-0ad7e4d8e758bb42f",
            "id": "igw-0ad7e4d8e758bb42f",
            "owner_id": "263112802384",
            "tags": {
              "Name": "social-medias-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-igw",
              "Project": "social-medias"
            },
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020eef2d7db59c7e6",
            "association_id": "eipassoc-0fb490ce996f9a9e4",
            "connectivity_type": "public",
            "id": "nat-0fa50cd83fc6853d6",
            "network_interface_id": "eni-0922cab10a0f25232",
            "private_ip": "10.0.0.252",
            "public_ip": "18.193.170.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a545fd5b38efeec5",
            "tags": {
              "Name": "social-medias-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-nat",
              "Project": "social-medias"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:route-table/rtb-08ae75c622741a1d3",
            "id": "rtb-08ae75c622741a1d3",
            "owner_id": "263112802384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa50cd83fc6853d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "social-medias-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-private-rt",
              "Project": "social-medias"
            },
            "timeouts": null,
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:route-table/rtb-06124204f29134d6c",
            "id": "rtb-06124204f29134d6c",
            "owner_id": "263112802384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad7e4d8e758bb42f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "social-medias-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-public-rt",
              "Project": "social-medias"
            },
            "timeouts": null,
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cedb3c0acbc43df",
            "route_table_id": "rtb-08ae75c622741a1d3",
            "subnet_id": "subnet-036870397c3848ee1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0328645e837caf786",
            "route_table_id": "rtb-08ae75c622741a1d3",
            "subnet_id": "subnet-042097ef0089ca4b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a05a1d71adef176b",
            "route_table_id": "rtb-06124204f29134d6c",
            "subnet_id": "subnet-0a545fd5b38efeec5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03836dd48dd2417b5",
            "route_table_id": "rtb-06124204f29134d6c",
            "subnet_id": "subnet-0d33ea0a786f5aa14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "analytics_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:security-group/sg-0410c30cf6dfb7b1c",
            "description": "PostgreSQL + Superset on analytics EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Docker image pulls and updates",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for package mirrors",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0410c30cf6dfb7b1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Superset UI",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              }
            ],
            "name": "social-medias-dev-analytics-ec2-sg",
            "name_prefix": "",
            "owner_id": "263112802384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "social-medias-dev-analytics-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-analytics-ec2-sg",
              "Project": "social-medias"
            },
            "timeouts": null,
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gold_load_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:security-group/sg-01f15109ec6cf8346",
            "description": "Gold-to-Postgres load Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS for CloudWatch and AWS APIs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-01f15109ec6cf8346",
            "ingress": [],
            "name": "social-medias-dev-gold-load-lambda-sg",
            "name_prefix": "",
            "owner_id": "263112802384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "social-medias-dev-gold-load-lambda-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-gold-load-lambda-sg",
              "Project": "social-medias"
            },
            "timeouts": null,
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_hn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:security-group/sg-06c91e4f24f70fafe",
            "description": "HN bronze Lambda - HTTPS egress to Algolia API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to Hacker News Algolia API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-06c91e4f24f70fafe",
            "ingress": [],
            "name": "social-medias-dev-hn-lambda-sg",
            "name_prefix": "",
            "owner_id": "263112802384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "social-medias-dev-hn-lambda-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-hn-lambda-sg",
              "Project": "social-medias"
            },
            "timeouts": null,
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:subnet/subnet-036870397c3848ee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036870397c3848ee1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263112802384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "social-medias-dev-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-private-1",
              "Project": "social-medias",
              "Tier": "private"
            },
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:subnet/subnet-042097ef0089ca4b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042097ef0089ca4b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263112802384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "social-medias-dev-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-private-2",
              "Project": "social-medias",
              "Tier": "private"
            },
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:subnet/subnet-0a545fd5b38efeec5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a545fd5b38efeec5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263112802384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "social-medias-dev-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-public-1",
              "Project": "social-medias",
              "Tier": "public"
            },
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:subnet/subnet-0d33ea0a786f5aa14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d33ea0a786f5aa14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263112802384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "social-medias-dev-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-public-2",
              "Project": "social-medias",
              "Tier": "public"
            },
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:vpc/vpc-006d5fb675f4de0ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003c8f72a533c304a",
            "default_route_table_id": "rtb-097fc930fc5fd75b8",
            "default_security_group_id": "sg-0055211340db9fcd4",
            "dhcp_options_id": "dopt-0936e577e915b4b33",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006d5fb675f4de0ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097fc930fc5fd75b8",
            "owner_id": "263112802384",
            "tags": {
              "Name": "social-medias-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-vpc",
              "Project": "social-medias"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:vpc-endpoint/vpce-0c230b84db7197b54",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.208.0/22",
              "3.5.136.0/22",
              "3.5.120.0/22",
              "52.219.218.0/24",
              "52.219.140.0/24",
              "16.12.32.0/22",
              "52.219.72.0/22",
              "16.15.20.0/22",
              "3.5.134.0/23",
              "16.12.24.0/21",
              "52.219.168.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c230b84db7197b54",
            "ip_address_type": "ipv4",
            "owner_id": "263112802384",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06124204f29134d6c",
              "rtb-08ae75c622741a1d3"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "service_region": "eu-central-1",
            "state": "available",
            "tags": {
              "Name": "social-medias-dev-s3-endpoint"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "social-medias-dev-s3-endpoint",
              "Project": "social-medias"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-006d5fb675f4de0ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "gold_load_postgres_to_analytics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:security-group-rule/sgr-03b651090bae69fe7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "PostgreSQL to analytics EC2",
            "from_port": 5432,
            "id": "sgr-03b651090bae69fe7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0410c30cf6dfb7b1c",
            "security_group_id": "sg-01f15109ec6cf8346",
            "security_group_rule_id": "sgr-03b651090bae69fe7",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "social-medias"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.analytics_ec2",
            "aws_security_group.gold_load_lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "analytics_postgres_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:security-group-rule/sgr-070b748337cd0e31c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "PostgreSQL from gold load Lambda",
            "from_port": 5432,
            "id": "sgr-070b748337cd0e31c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01f15109ec6cf8346",
            "security_group_id": "sg-0410c30cf6dfb7b1c",
            "security_group_rule_id": "sgr-070b748337cd0e31c",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "social-medias"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.analytics_ec2",
            "aws_security_group.gold_load_lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "analytics_postgres_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:263112802384:security-group-rule/sgr-0f1e7eddc8cfc8eac",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "PostgreSQL from VPC (Lambda in private subnets)",
            "from_port": 5432,
            "id": "sgr-0f1e7eddc8cfc8eac",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0410c30cf6dfb7b1c",
            "security_group_rule_id": "sgr-0f1e7eddc8cfc8eac",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "social-medias"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.analytics_ec2",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}